tenzir/integration/data/reference/pipelines_local/test_chart_attributes/step_06.ref
error: invalid chart type
 --> <input>:1:30
  |
1 | from stdin read json | chart piett --value b
  |                              ^^^^^
  |
  = hint: valid chart types are: line, area, bar, pie
  = docs: https://docs.tenzir/operators/chart
